# FetchPublicBlacklists

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  LICENSE  Makefile  README.rst  brew.rb  requirements.txt  setup.cfg  setup.py  tox.ini
FetchPublicBlacklists/: FetchPublicBlacklists.py  __init__.py  helpers.py
code/: __init__.py  core.py  helpers.py
docs/: conf.py  index.rst
etc/: FetchPublicBlacklists.cfg.template
tests/: __init__.py  context.py  test_advanced.py  test_basic.py
