[metadata]
name = FetchPublicBlackists
version = 0.3.3
author = reactive-firewall
author-email = reactive-firewall@users.noreply.github.com
summary = Fetches Public Blacklists
description-file = README.rst
home-page = https://github.com/reactive-firewall/FetchPublicBlacklists.git

[bdist_wheel]
universal=1

[files]
packages = FetchPublicBlacklists

